# 09_strophe_cmake

./: CMakeLists.txt  Makefile.am
